Removed eslint and added Top bar

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,11 @@
+/**
+ * @author Harsh Patel @harsh2124
+ */
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
 
 @import './theme';
+@import './components/Home';
 
 * {
     padding: 0;
