Added Top Bar Menu button for Profile and Sign Out

--- a/src/scss/components/Topbar/Topbar.scss
+++ b/src/scss/components/Topbar/Topbar.scss
@@ -12,4 +12,9 @@
     .topbar_header {
         flex-grow: 1;
     }
+
+    .topbar_icon {
+        padding: 0;
+        margin-right: 12px;
+    }
 }
