--- a/src/scss/components/Sidebar.scss
+++ b/src/scss/components/Sidebar.scss
@@ -4,4 +4,15 @@
 
 .sidebar_list {
     width: 250px;
+
+    .sidebar_button_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        button {
+            width: 150px;
+            margin-top: 30px;
+        }
+    }
 }
